# payment-microservice-test

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
DOCS/: ARCHITECTURE.md  POMODORO.md  TEST_TASK.md  TODO.md
app/: main.py
app/api/: deps.py
app/api/v1/: payments.py
app/crud/: payment.py
app/db/: base.py  session.py
app/db/alembic/: env.py
app/db/alembic/versions/: 56e1415c05f5_create_payments_and_outbox.py
app/db/models/: payment.py
app/infrastructure/: broker.py
app/schemas/: payment.py
app/services/: payment.py
app/settings/: config.py
app/workers/: __main__.py
app/workers/consumer/: handler.py  webhook.py
app/workers/outbox/: outbox_worker.py
tests/: conftest.py  test_consumer.py  test_outbox.py  test_payments.py  test_process_payment.py
