[project]
name = "luna-test-task"
version = "0.1.0"
description = ""
authors = [
    {name = "Ruslan Zarifov",email = "xeizzen@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14, <4.0"
dependencies = [
    "fastapi (>=0.135.3, <0.136.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "uvicorn (>=0.44.0,<0.45.0)",
    # v RMQ v
    "faststream (>=0.6.7,<0.7.0)",
    # v WEBHOOKS v
    "httpx (>=0.28.1,<0.29.0)",
    # v TESTS v
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
# !TODO: UNDERSTAND WHY IT NOT ALWAYS GETS IT FOR TESTS AUTOMATICALLY:
asyncio_default_fixture_loop_scope = "session"
